--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -5,6 +5,6 @@
         <title>Detail</title>
     </head>
     <body>
-
+      <h2>{{my_object.restaurant_name}}: {{my_object.food_type}}</h2>
     </body>
 </html>
